--- a/JavaScript/1-numbers.html
+++ b/JavaScript/1-numbers.html
@@ -83,7 +83,7 @@
         x = x - 1; // 
         x -= 1; // 
         x -= 5; // 
-        x --; // 
+        x --; // operador unário
 
         x = x * 1; // 
         x *= 5; // 
