--- a/JavaScript/4-2-exercicio.html
+++ b/JavaScript/4-2-exercicio.html
@@ -40,20 +40,13 @@
     </main>
 
     <script>
+        let texto = '';
 
-        // manda uma mensagem de alerta, numa aba justaposta:
-        // alert('Hello Wolrd!');
-        
+        let x = Number(prompt('Insira um número:'));
+
         // escrever dentro da section output
-        
-        /*
         let output = document.getElementById('output');        
-        output.innerHTML = 'Hello World';
-        */
-
-        //escrever na consola:
-        console.log(x)
-        x += 1;
+        output.innerHTML = texto;
 
     </script>
 <!--
