Sessão 5: coisas em falta

--- a/JavaScript/8-scope.html
+++ b/JavaScript/8-scope.html
@@ -64,9 +64,23 @@
         var num = 12;
         */
 
+        // define o valor de uma constante:
         const pi = 3.14;
+        // invoca a constante:
         console.log('pi: ', pi);
 
+        const arr = [1, 2, 3,];
+        console.log('arr: ', arr);
+        /*
+        // acresce um valor à constante:
+        arr.push(4);
+        // apresenta a constante actualizada:
+        console.log('arr: ', arr);
+        */
+
+        /*
+        arr=[];
+        */
 
         /*
         let output = document.getElementById('output');        
