Sessão 7 : fim de sessão

--- a/JavaScript/1-DOM/9_inner-text-and-text-content.html
+++ b/JavaScript/1-DOM/9_inner-text-and-text-content.html
@@ -21,6 +21,6 @@
       </ul>
       <div id="scriptResults"></div>
     </div>
-    <script src="js/9_inner-text-and-text-content.js"></script>
+    <script src="js/9_text-content.js"></script>
   </body>
 </html>
