--- a/JavaScript/0-intro/11-classes.html
+++ b/JavaScript/0-intro/11-classes.html
@@ -48,7 +48,7 @@
 
         class Hotel{
             // propiedades:
-            // a palavra function não nbecessida ser aplicada:
+            // a palavra function não necessida ser aplicada:
             constructor(nome, quartos, reservas){
                 this.name = nome;
                 this.rooms = quartos;
