--- a/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/index.html
+++ b/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <script src="exercicioDOM2.js"></script>
+
+    <!--
+    <main class="layout">
+        <article class="thumb" id="thumb">
+            <h1 class="title" id="title">Angular Com Typescript</h1>
+            <h2 class="author" id="author">Yakov Fain</h2>
+            <img src="livros/angular.jpg">
+            <h3 class="read" id="read">Already Read: ❌✅</h3>
+        </article>
+
+        <article class="thumb" id="thumb">
+            <h1 class="title" id="title">Angular Com Typescript</h1>
+            <h2 class="author" id="author">Yakov Fain</h2>
+            <img src="livros/angular.jpg">
+            <h3 class="read" id="read">Already Read: ❌✅</h3>
+        </article>
+    </main>
+    -->
+    
+
 </body>
 </html>
