Sessão 9 : Revisão exercicio DOM 2; EVENTS, part 1

--- a/JavaScript/2-EVENTS/1_event-attributes.html
+++ b/JavaScript/2-EVENTS/1_event-attributes.html
@@ -13,7 +13,8 @@
         <form method="post" action="http://www.example.org/register">
 
             <label for="username">Create a username: </label>
-            <input type="text" id="username" />
+            <input type="text" id="username" onblur="checkUsername()" />
+            <!-- para deixar mensagem caso o utilizador falte em alguma coisa no preenchimento -->
             <div id="feedback"></div>
 
             <label for="password">Create a password: </label>
