--- a/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/index.html
+++ b/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/index.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Exercício DOM 2</title>
+    <link rel="stylesheet" href="css/style-flex.css">
+    <title>Biblioteca de Livros de JS</title>
 </head>
 <body>
-    <script src="exercicioDOM2.js"></script>
+    <!--
+    <script src="exercicioDOM2.js"></script>    
+    -->
+    
+    <h1>Biblioteca de Livros de JS</h1>
+
+    <section class="grid" id="grid">
+    <!--
+    MODELO
+        <article>
+            <h1>Título do Livro</h1>
+            <h2>Autor do Livro</h2>
+            <img src="livros/angular.jpg" alt="titulo">
+            <p>Already Read: ✅❌</p>
+        </article>
+    -->
+    </section>
+
+
+
+    <!-- atenção à ordem como estes ficheiros são chamados!!! primeiro os dados, depois as funções -->
+    <script src="js/data.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/index.js"></script>
+    
 
     <!--
     <main class="layout">
