--- a/JavaScript/2-EVENTS/9_load.html
+++ b/JavaScript/2-EVENTS/9_load.html
@@ -4,6 +4,8 @@
 <head>
     <title>JavaScript - Load</title>
     <link rel="stylesheet" href="css/c06.css" />
+    <!-- meter o script no inicio da página -->
+    <script src="js/9_load.js"></script>
 </head>
 
 <body>
@@ -23,7 +25,7 @@
 
         </form>
     </div>
-    <script src="js/9_load.js"></script>
+
 </body>
 
 </html>
