repositorio js, actualizacoes

--- a/index.html
+++ b/index.html
@@ -251,65 +251,25 @@
         <section id="s_html" class="_html"></section>
         -->
         <section id="s_css" class="_css">
-            F:\# Cursos\2024_FLAG Full Stack\11_Javascript\flag-2025-JS-main\JavaScript\_exercicios\_iniciais\exercicioDOM-1-inicio\exercicioDOM.html
             <a href="https://github.com/mario8988silva/modulo_javascript/JavaScript/_exercicios/_iniciais/exercicioDOM-1-inicio/exercicioDOM.html" target="_blank" class="css_1">                
                 <p>Exercicio DOM</p>
             </a>
 
             <a href="https://mario8988silva.github.io/07_modulo-css/0_exercicios/2-newsletter-FLAG_2/2-newsletter-1-FLAG/index.html" target="_blank" class="css_2">
-                <!--
-                <p>newsletter flag</p>
-                -->
+                <p>Exercicio DOM 2</p>
             </a>
 
             <a href="#" target="_blank" class="css_3">
-                <!--
-                <p>newsletter edp</p>
-                -->
+                <p>Exercicio Form</p>
             </a>
 
             <a href="#" target="_blank" class="css_4">
-                <!--
-                <p>newsletter teashop</p>
-                -->
+                <p>Biblioteca</p>
             </a>
 
             <a href="#" target="_blank" class="css_5">
-                <!--
-                <p>galley grids</p>
-                -->
+                <p>Biblioteca v.2</p>
             </a>
-
-            <a href="#" target="_blank" class="css_6">
-                <!--
-                <p>exercicio speo</p>
-                -->
-            </a>
-
-            <a href="#" target="_blank" class="css_7">
-                <!--
-                <p>exercicio sass</p>
-                -->
-            </a>
-            
-            <a href="#" target="_blank" class="css_8">
-                <!--
-                <p>exercicio RWD gallery</p>
-                -->
-            </a>
-
-            <a href="#" target="_blank" class="css_9">
-                <!--
-                <p>exercicio RWD responsive flex</p>
-                -->
-            </a>
-
-            <a href="#" target="_blank" class="css_10">
-                <!--
-                <p>exercicio RWD responsive flex</p>
-                -->
-            </a>
-
         </section>
     </main>
 
