--- a/JavaScript/_exercicios/index.html
+++ b/JavaScript/_exercicios/index.html
@@ -251,25 +251,33 @@
         <section id="s_html" class="_html"></section>
         -->
         <section id="s_css" class="_css">
-            <a href="https://github.com/mario8988silva/modulo_javascript/JavaScript/_exercicios/_iniciais/exercicioDOM-1-inicio/exercicioDOM.html" target="_blank" class="css_1">                
+            <a href="https://github.com/mario8988silva/_iniciais/exercicioDOM-1-inicio/exercicioDOM.html" target="_blank" class="css_1">                
                 <p>Exercicio DOM</p>
             </a>
 
-            <a href="https://mario8988silva.github.io/07_modulo-css/0_exercicios/2-newsletter-FLAG_2/2-newsletter-1-FLAG/index.html" target="_blank" class="css_2">
+            <a href="https://github.com/mario8988silva/modulo_javascript/" target="_blank" class="css_2">
                 <p>Exercicio DOM 2</p>
             </a>
 
-            <a href="#" target="_blank" class="css_3">
+            <a href="https://github.com/mario8988silva/modulo_javascript/" target="_blank" class="css_3">
                 <p>Exercicio Form</p>
             </a>
 
-            <a href="#" target="_blank" class="css_4">
+            <a href="https://github.com/mario8988silva/modulo_javascript/" target="_blank" class="css_4">
                 <p>Biblioteca</p>
             </a>
 
-            <a href="#" target="_blank" class="css_5">
+            <a href="https://github.com/mario8988silva/modulo_javascript/" target="_blank" class="css_5">
                 <p>Biblioteca v.2</p>
             </a>
+
+            <!--
+            <a href=""https://mario8988silva.github.io/07_modulo-css/0_exercicios/2-newsletter-FLAG_2/2-newsletter-1-FLAG/index.html" " target="_blank" class="css_5">
+                <p>Biblioteca v.2</p>
+            </a>
+            -->
+
+
         </section>
     </main>
 
