--- a/javascript/_exercicios/biblioteca/biblioteca-V2-filters-delete/index.html
+++ b/javascript/_exercicios/biblioteca/biblioteca-V2-filters-delete/index.html
@@ -28,9 +28,10 @@
         <nav class="grid searchContainer" id="searchContainer">
             <!--
             <form action="#">
-            -->
-                <label for="searchTxt">Search By Title: </label>            
-                <input type="search" class="searchTxt" id="searchTxt" name="search"><br><br>
+            -->           
+            <label for="searchTxt">Search:</label> 
+            <input type="search" class="searchTxt" id="searchTxt" name="search">
+                
             <!--
             </form>
             -->
@@ -50,11 +51,11 @@
         </article>
         -->
     </section>
-    
+    <!--
     <picture class="imgContainer" id="imgContainer">
         <img src="livros/angularGr.png" alt="nome" class="imgBig" id="imgBig">
     </picture>    
-
+    -->
     <script src="js/data.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/index.js"></script>
