--- a/javascript/5-objects/0-template.html
+++ b/javascript/5-objects/0-template.html
@@ -43,7 +43,7 @@
     <script type="module" src="1-object-create.js"></script>
     -->
 
-    <script type="module" src="4-classes.js"></script>
+    <script type="module" src="6-this-call.js"></script>
   
 </body>
 </html>
